--- a/JStable/package.json
+++ b/JStable/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ethers": "^6.9.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "web3": "^4.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
